<resources>
    <string name="app_name">Lesson_1_Fedin</string>
    <string name="button1">Задание 1</string>
    <string name="button2">Задание 2</string>
    <string name="NameStudent">Имя ученика</string>
    <string name="button3">Добавить</string>
    <string name="button4">Показать список</string>
    <string name="textview">@string/list</string>
    <string name="studentLIst">Показать список студентов</string>
    <string name="list">Список студентов</string>
    <string name="textview3">TextView</string>
    <string name="student">Name</string>
    <string name="error">Некоректные данные в поле ввода</string>

</resources>
